--- a/shys-m5-dial.yaml
+++ b/shys-m5-dial.yaml
@@ -1,7 +1,5 @@
 substitutions:
   name: "m5-dial"
-  friendly_name: "M5 Dial"
-  m5_textsensor_id: "m5_textsensor_id"
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password  
 
@@ -48,8 +46,8 @@ improv_serial:
 captive_portal:
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  ssid: ${wifi_ssid}
+  password: ${wifi_password}
   ap:
     password: "12345678"
 
