--- a/shys-m5-dial.yaml
+++ b/shys-m5-dial.yaml
@@ -1,5 +1,5 @@
 substitutions:
-  name: "m5-dial"
+  name: !devicename
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password  
   ota_password: !secret ota_password
