--- a/shys-m5-dial.yaml
+++ b/shys-m5-dial.yaml
@@ -2,24 +2,22 @@ substitutions:
   name: "m5-dial"
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
-
+  
 esphome:
   name: ${name}
   name_add_mac_suffix: false
   project:
     name: smarthomeyourself.m5_dial
-    version: "1.0"
-
+    version: "1.1"
+      
   platformio_options:
     lib_deps:
-      - WiFi
-      - SPI
-      - FS
       - Wire
       - EEPROM
       - ArduinoJson
       - m5stack/M5Unified@0.1.14
       - m5stack/M5Dial@1.0.2
+
 
 external_components:
   - source:
@@ -36,16 +34,30 @@ esp32:
   board: esp32-s3-devkitc-1
   framework:
     type: arduino
+  flash_size: 8MB
 
 logger:
-  level: DEBUG
+  level: INFO
+  logs:
+    api: WARN
+    esp32.preferences: WARN
+    LOOP: WARN
+    DISPLAY: WARN
+    TOUCH: WARN
+    HA_API: WARN
+    DEVICE: WARN
+    MEDIAPLAYER: WARN
 
 api:
+  homeassistant_states: true
+  homeassistant_services: true
+  custom_services: true
+  
 ota:
   platform: esphome
 
-improv_serial:
-captive_portal:
+#improv_serial:
+#captive_portal:
 
 wifi:
   ssid: ${wifi_ssid}
