Refactored to match 2026.1 typings

--- a/shys-m5-dial.yaml
+++ b/shys-m5-dial.yaml
@@ -25,6 +25,7 @@ external_components:
       url: https://github.com/SmartHome-yourself/m5-dial-for-esphome/
       ref: main
     components: [shys_m5_dial]
+    refresh: 1s
 
 dashboard_import:
   package_import_url: github://SmartHome-yourself/m5-dial-for-esphome/shys-m5-dial.yaml@main
